# sokoban

./: .gitignore  CMakeLists.txt  Makefile  sokoban
include/: my.h  struct.h
lib/my/: Makefile  my.h  my_compute_power_rec.c  my_compute_square_root.c  my_find_prime_sup.c  my_getnbr.c  my_is_prime.c  my_isneg.c  my_put_nbr.c  my_putchar.c  my_putstr.c  my_revstr.c  my_showmem.c  my_showstr.c  my_sort_int_array.c  my_str_isalpha.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_strcapitalize.c  my_strcat.c  my_strcmp.c  my_strcpy.c  my_strlen.c  my_strlowcase.c  my_strncat.c  my_strncmp.c  my_strncpy.c  my_strstr.c  my_strupcase.c  my_swap.c
lib/my/lib_printf/: Makefile
lib/my/lib_printf/include/: my.h
lib/my/lib_printf/src/: my_printf.c  utils.c  utils2.c  va_adress.c  va_bin.c  va_hexa.c  va_nbr.c  va_octal.c  va_printable.c  va_putchar.c  va_putpercent.c  va_putstr.c  va_unsinbr.c
map/: map_1.txt  map_10.txt  map_2.txt  map_3.txt  map_4.txt  map_5.txt  map_6.txt  map_b.txt  map_c.txt
src/: Game.cpp  Game.hpp  Map.cpp  Map.hpp  SFML.cpp  SFML.hpp  box.c  check_map.c  end.c  event.c  init_game.c  main.c  main.cpp  map.c  player.c  read_map.c  sokoban.c
tmpMap/: map_12.txt
utils/: for_check.c  for_read.c  free_mem.c  read_map.c  utils.c
